# vulkalc

./: .gitignore  .travis.yml  CMakeLists.txt  CODESTYLE.md  CONTRIBUTING.md  Components.xml  Doxyfile  GeneratedDoxyfile  LICENSE.md  Pipeline.xml  README.md  Shader loading process.xml  Shader running process.xml  appveyor.yml  detect_arch.c  license  release-notes.md
appveyor VulkanSDK/1.0.39.1/Bin32/: VkLayer_image.json  VkLayer_vktrace_layer.json
appveyor VulkanSDK/1.0.39.1/Include/shaderc/: shaderc.h  shaderc.hpp
appveyor VulkanSDK/1.0.39.1/Include/vulkan/: GLSL.std.450.h  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.py  vk_icd.h  vk_layer.h  vk_platform.h  vulkan.h  vulkan.hpp
appveyor VulkanSDK/1.0.39.1/Source/layers/: api_dump.cpp  api_dump.h  core_validation.cpp  core_validation.h  core_validation_error_enums.h  core_validation_types.h  descriptor_sets.cpp  descriptor_sets.h  image.cpp  image.h  monitor.cpp  object_tracker.cpp  object_tracker.h  parameter_validation.cpp  parameter_validation.h  parameter_validation_utils.h  screenshot.cpp  swapchain.cpp  swapchain.h  thread_check.h  threading.cpp  threading.h  unique_objects.cpp  unique_objects.h  unique_objects_wrappers.h  vk_layer_config.cpp  vk_layer_config.h  vk_layer_data.h  vk_layer_extension_utils.cpp  vk_layer_extension_utils.h  vk_layer_logging.h  vk_layer_table.cpp  vk_layer_table.h  vk_layer_utils.cpp  vk_layer_utils.h
appveyor VulkanSDK/1.0.39.1/Source/lib/: VkLayer_api_dump.json  VkLayer_object_tracker.json  VkLayer_swapchain.json  VkLayer_unique_objects.json
appveyor VulkanSDK/1.0.39.1/Source/lib32/: VkLayer_core_validation.json  VkLayer_monitor.json  VkLayer_parameter_validation.json  VkLayer_screenshot.json  VkLayer_threading.json
appveyor VulkanSDK/1.0.39.1/Source/loader/: cJSON.c  cJSON.h  debug_report.c  debug_report.h  dev_ext_trampoline.c  dirent_on_windows.c  dirent_on_windows.h  gpa_helper.h  loader.c  loader.h  murmurhash.c  murmurhash.h  table_ops.h  trampoline.c  vk_loader_platform.h  wsi.c  wsi.h
appveyor VulkanSDK/1.0.39.1/glslang/: CMakeLists.txt
appveyor VulkanSDK/1.0.39.1/glslang/OGLCompilersDLL/: CMakeLists.txt  InitializeDll.cpp  InitializeDll.h
appveyor VulkanSDK/1.0.39.1/glslang/SPIRV/: CMakeLists.txt  GLSL.ext.AMD.h  GLSL.ext.KHR.h  GLSL.std.450.h  GlslangToSpv.cpp  GlslangToSpv.h  InReadableOrder.cpp  Logger.cpp  Logger.h  SPVRemapper.cpp  SPVRemapper.h  SpvBuilder.cpp  SpvBuilder.h  bitutils.h  disassemble.cpp  disassemble.h  doc.cpp  doc.h  hex_float.h  spirv.hpp  spvIR.h
appveyor VulkanSDK/1.0.39.1/glslang/StandAlone/: CMakeLists.txt  ResourceLimits.cpp  ResourceLimits.h  StandAlone.cpp  Worklist.h  spirv-remap.cpp
appveyor VulkanSDK/1.0.39.1/glslang/Test/: hlsl.attribute.expression.comp  hlsl.getdimensions.dx10.frag  hlsl.intrinsics.negative.frag  hlsl.intrinsics.vert  hlsl.pp.line.frag  hlsl.pp.tokenpasting.frag  hlsl.promotions.frag  preprocessor.include.disabled.vert  preprocessor.line.vert  tokenPaste.vert
appveyor VulkanSDK/1.0.39.1/glslang/Test/baseResults/: preprocessor.line.vert.out
appveyor VulkanSDK/1.0.39.1/glslang/glslang/: CMakeLists.txt
appveyor VulkanSDK/1.0.39.1/glslang/glslang/GenericCodeGen/: CodeGen.cpp  Link.cpp
appveyor VulkanSDK/1.0.39.1/glslang/glslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  InfoSink.h  InitializeGlobals.h  PoolAlloc.h  ResourceLimits.h  ShHandle.h  Types.h  arrays.h  intermediate.h
appveyor VulkanSDK/1.0.39.1/glslang/glslang/MachineIndependent/: Constant.cpp  InfoSink.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  LiveTraverser.h  ParseContextBase.cpp  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  RemoveTree.cpp  RemoveTree.h  Scan.cpp  Scan.h  ScanContext.h  ShaderLang.cpp  SymbolTable.cpp  SymbolTable.h  Versions.cpp  Versions.h  glslang_tab.cpp  glslang_tab.cpp.h  intermOut.cpp  iomapper.cpp  iomapper.h  limits.cpp  linkValidate.cpp  localintermediate.h  parseConst.cpp  parseVersions.h  propagateNoContraction.cpp  propagateNoContraction.h  reflection.cpp  reflection.h
appveyor VulkanSDK/1.0.39.1/glslang/glslang/OSDependent/: osinclude.h
appveyor VulkanSDK/1.0.39.1/glslang/gtests/: AST.FromFile.cpp  BuiltInResource.FromFile.cpp  CMakeLists.txt  Config.FromFile.cpp  HexFloat.cpp  Hlsl.FromFile.cpp  Initializer.h  Link.FromFile.cpp  Pp.FromFile.cpp  Remap.FromFile.cpp  Settings.cpp  Settings.h  Spv.FromFile.cpp  TestFixture.cpp  TestFixture.h  main.cpp
appveyor VulkanSDK/1.0.39.1/glslang/hlsl/: CMakeLists.txt  hlslAttributes.cpp  hlslAttributes.h  hlslGrammar.cpp  hlslGrammar.h  hlslOpMap.cpp  hlslOpMap.h  hlslParseHelper.cpp  hlslParseHelper.h  hlslParseables.cpp  hlslParseables.h  hlslScanContext.cpp  hlslScanContext.h  hlslTokenStream.cpp  hlslTokenStream.h  hlslTokens.h
doc/: CMakeLists.txt
doc/Bachelor's project documents/: Analysis_ru.docx  Sources list.docx  Specification_ru.docx  ВКРБ.docx
include/: library.h
resources/: Components.xml  Hierarchy.xml  Shader loading process.xml  Shader running process.xml
sample/: CMakeLists.txt  Sample.cpp
shaders/: example.comp
src/: Application.cpp  CMakeLists.txt  Configuration.cpp  Configurator.cpp  Exceptions.cpp  PhysicalDevice.cpp  Runner.cpp  Shader.cpp  ShaderProvider.cpp  Task.cpp  Utilities.cpp  VerifiedShader.cpp  VulkanInfo.cpp  library.cpp
src/include/: Application.h  Application.hpp  Configuration.hpp  Configurator.hpp  Device.hpp  Exceptions.h  Exceptions.hpp  Export.hpp  InformationProvider.h  InformationProvider.hpp  PhysicalDevice.hpp  RAII.h  RAII.hpp  Runner.hpp  Shader.hpp  ShaderProvider.hpp  Task.hpp  TaskResult.hpp  Utilities.h  Utilities.hpp  VerifiedShader.hpp  Verifier.h  Verifier.hpp  VulkalcVersion.hpp  VulkanInfo.h  VulkanInfo.hpp  export.h  library.h
to_cmake_configure/: VulkalcVersion.hpp  appveyor.yml
vulkalc-tests/: ApplicationTest.cpp  CMakeLists.txt  ExceptionsTest.cpp  Test.cpp  UtilitiesTest.cpp  catch.hpp
vulkalc-tools/: CMakeLists.txt
vulkalc-tools/include/: device_info.h
vulkalc-tools/src/: device_info.cpp
(+14 files in other folders)
