cmake_minimum_required(VERSION 2.8.7)
project(vulkalc)

if(NOT EXISTS "$ENV{VULKAN_SDK}")
    message(FATAL_ERROR "Vulkalc requires Vulkan SDK installed.")
endif(NOT EXISTS "$ENV{VULKAN_SDK}")

option(VULKALC_BUILD_VULKALC "Build Vulkalc library" 1)
option(VULKALC_BUILD_STATIC "Static or dynamic library to make" 1)
option(VULKALCTEST_INCLUDE_TESTS "Include Vulkalc tests" 1)
option(VULKALCTOOLS_INCLUDE_TOOLS "Include Vulkalc tools" 1)
option(VULKALCDOC_GENERATE_DOC "Generate documentation" 1)
option(VULKALCDOC_GENERATE_HTML "Generate HTML documentation" 1)
option(VULKALCDOC_GENERATE_PDF "Generate PDF documentation" 0)
option(VULKALCDOC_GENERATE_LATEX "Generate LaTeX documentation" 0)
option(VULKALCDOC_GENERATE_MAN "Generate man pages with documentation" 0)
option(VULKALCDOC_GENERATE_RTF "Generate RTF file with documentation" 0)

if(VULKALC_BUILD_VULKALC)
    add_subdirectory(src)
endif(VULKALC_BUILD_VULKALC)
if(VULKALCTEST_INCLUDE_TESTS)
    add_subdirectory(vulkalc-tests)
endif(VULKALCTEST_INCLUDE_TESTS)
if(VULKALCTOOLS_INCLUDE_TOOLS)
    add_subdirectory(vulkalc-tools)
endif(VULKALCTOOLS_INCLUDE_TOOLS)
if(VULKALCDOC_GENERATE_DOC)
    add_subdirectory(doc)
endif(VULKALCDOC_GENERATE_DOC)
