project(vulkalc-doc)

find_package(Doxygen)
if(DOXYGEN_FOUND)
    set(DOC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../)
    set(GENERATED_DOXYFILE GeneratedDoxyfile)
    configure_file(${ROOT_DIR}/${GENERATED_DOXYFILE} ${DOC_DIR} COPYONLY)
    configure_file(${ROOT_DIR}/README.MD ${DOC_DIR} COPYONLY)

    if(VULKALCDOC_GENERATE_HTML)
        file(APPEND ${GENERATED_DOXYFILE} "GENERATE_HTML          = YES\n")
    endif(VULKALCDOC_GENERATE_HTML)
    if(VULKALCDOC_GENERATE_PDF)
        file(APPEND ${GENERATED_DOXYFILE} "GENERATE_PDF          = YES\n")
    endif(VULKALCDOC_GENERATE_PDF)
    if(VULKALCDOC_GENERATE_LATEX)
        file(APPEND ${GENERATED_DOXYFILE} "GENERATE_LATEX          = YES\n")
    endif(VULKALCDOC_GENERATE_LATEX)
    if(VULKALCDOC_GENERATE_MAN)
        file(APPEND ${GENERATED_DOXYFILE} "GENERATE_MAN          = YES\n")
    endif(VULKALCDOC_GENERATE_MAN)
    if(VULKALCDOC_GENERATE_RTF)
        file(APPEND ${GENERATED_DOXYFILE} "GENERATE_RTF          = YES\n")
    endif(VULKALCDOC_GENERATE_RTF)
    add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} ${DOC_DIR}/${GENERATED_DOXYFILE}
            WORKING_DIRECTORY ${ROOT_DIR}/src)
else()
    message(FATAL_ERROR "Doxygen is required to build documentation")
endif(DOXYGEN_FOUND)