project(vulkalc-doc)

find_package(Doxygen)
if(DOXYGEN_FOUND)
    set(DOC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
    configure_file(${ROOT_DIR}/GeneratedDoxyfile ${DOC_DIR} COPYONLY)
    configure_file(${ROOT_DIR}/README.MD ${DOC_DIR} COPYONLY)

    if(VULKALCDOC_GENERATE_HTML)
        file(APPEND ${DOC_DIR}/GeneratedDoxyfile "GENERATE_HTML          = YES\n")
    endif(VULKALCDOC_GENERATE_HTML)
    if(VULKALCDOC_GENERATE_PDF)
        file(APPEND ${DOC_DIR}/GeneratedDoxyfile "GENERATE_PDF          = YES\n")
    endif(VULKALCDOC_GENERATE_PDF)
    if(VULKALCDOC_GENERATE_LATEX)
        file(APPEND ${DOC_DIR}/GeneratedDoxyfile "GENERATE_LATEX          = YES\n")
    endif(VULKALCDOC_GENERATE_LATEX)
    if(VULKALCDOC_GENERATE_MAN)
        file(APPEND ${DOC_DIR}/GeneratedDoxyfile "GENERATE_MAN          = YES\n")
    endif(VULKALCDOC_GENERATE_MAN)
    if(VULKALCDOC_GENERATE_RTF)
        file(APPEND ${DOC_DIR}/GeneratedDoxyfile "GENERATE_RTF          = YES\n")
    endif(VULKALCDOC_GENERATE_RTF)
    add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} ${DOC_DIR}/GeneratedDoxyfile
            WORKING_DIRECTORY ${ROOT_DIR})
else()
    message(FATAL_ERROR "Doxygen is required to build documentation")
endif(DOXYGEN_FOUND)